<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.samsung.pocketchemest.MainActivity">

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:visibility="gone" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:visibility="gone" />

    <Button
        android:id="@+id/buttonReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration" />

    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings" />

    <Button
        android:id="@+id/buttonAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about" />

    <TextView
        android:id="@+id/dataTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp" />

</LinearLayout>
